--- a/PocketUni/res/layout/activity_tab_app.xml
+++ b/PocketUni/res/layout/activity_tab_app.xml
@@ -401,7 +401,7 @@
                     android:layout_centerHorizontal="true"
                     android:background="@drawable/btn_selector_app"
                     android:padding="3dip"
-                    android:scaleType="fitXY"
+            		android:scaleType="fitXY"
                     android:src="@drawable/app_icon_love" />
 
                 <TextView
@@ -443,7 +443,7 @@
                     android:textSize="14sp" />
             </RelativeLayout>
             
-            <RelativeLayout
+        <!--     <RelativeLayout
                 android:id="@+id/layout_app_train"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -469,7 +469,7 @@
                     android:text="培训"
                     android:textColor="#333"
                     android:textSize="14sp" />
-            </RelativeLayout>
+            </RelativeLayout> -->
 
             <RelativeLayout
                 android:id="@+id/layout_app_jqt1"
@@ -499,7 +499,7 @@
                     android:textSize="14sp" />
             </RelativeLayout>
 
-            <RelativeLayout
+       <!--      <RelativeLayout
                 android:id="@+id/layout_app_jqt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -525,7 +525,7 @@
                     android:text="街区淘"
                     android:textColor="#333"
                     android:textSize="14sp" />
-            </RelativeLayout>
+            </RelativeLayout> -->
         </LinearLayout>
     </LinearLayout>
 
