--- a/PocketUni/res/layout/activity_event_list.xml
+++ b/PocketUni/res/layout/activity_event_list.xml
@@ -49,30 +49,39 @@
             android:layout_height="43dip" >
 
             <Button
-                android:id="@+id/btn_create"
+                android:id="@+id/btn_wofaqide"
                 android:layout_width="wrap_content"
                 android:layout_height="44dip"
                 android:layout_weight="1"
                 android:background="@drawable/btn_selector_notice_sort"
-                android:text="发起的活动"
+                android:text="我发起的"
                 android:textSize="12sp" />
 
             <Button
-                android:id="@+id/btn_join"
+                android:id="@+id/btn_weikaishide"
                 android:layout_width="wrap_content"
                 android:layout_height="44dip"
                 android:layout_weight="1"
                 android:background="@drawable/btn_selector_notice_sort"
-                android:text="参加的活动"
+                android:text="未开始的"
                 android:textSize="12sp" />
 
             <Button
-                android:id="@+id/btn_favor"
+                android:id="@+id/btn_yikaishide"
                 android:layout_width="wrap_content"
                 android:layout_height="44dip"
                 android:layout_weight="1"
                 android:background="@drawable/btn_selector_notice_sort"
-                android:text="收藏的活动"
+                android:text="已开始的"
+                android:textSize="12sp" />
+
+            <Button
+                android:id="@+id/btn_woshoucangde"
+                android:layout_width="wrap_content"
+                android:layout_height="44dip"
+                android:layout_weight="1"
+                android:background="@drawable/btn_selector_notice_sort"
+                android:text="我收藏的"
                 android:textSize="12sp" />
         </LinearLayout>
 
@@ -85,6 +94,15 @@
 
     <com.handmark.pulltorefresh.library.PullToRefreshListView
         android:id="@+id/all_event_listview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar"
+        android:cacheColorHint="#00000000"
+        android:divider="@null"
+        android:orientation="vertical" />
+    
+    <com.handmark.pulltorefresh.library.PullToRefreshListView
+        android:id="@+id/recommend_event_listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/toolbar"
@@ -113,26 +131,44 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
+            android:layout_toLeftOf="@+id/btn_operate"
+            android:layout_toRightOf="@+id/btn_back"
             android:gravity="center"
             android:orientation="horizontal" >
 
             <Button
                 android:id="@+id/btn_all_event"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:background="@drawable/btn_selector_nav_following"
                 android:shadowColor="#000"
                 android:shadowDx="0"
                 android:shadowDy="-1"
                 android:shadowRadius="0.01"
-                android:text="所有活动"
+                android:text="全校活动"
+                android:textColor="#fff"
+                android:textSize="13sp" />
+
+            <Button
+                android:id="@+id/btn_recommend_event"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/btn_selector_nav_mid"
+                android:shadowColor="#000"
+                android:shadowDx="0"
+                android:shadowDy="-1"
+                android:shadowRadius="0.01"
+                android:text="推荐活动"
                 android:textColor="#fff"
                 android:textSize="13sp" />
 
             <Button
                 android:id="@+id/btn_my_event"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:background="@drawable/btn_selector_nav_followed"
                 android:shadowColor="#000"
                 android:shadowDx="0"
