--- a/PocketUni/res/layout/list_item_event_comments.xml
+++ b/PocketUni/res/layout/list_item_event_comments.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#fcfcfc"
@@ -51,10 +52,9 @@
                 android:id="@+id/text_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dip"                
+                android:layout_marginTop="4dip"
                 android:linksClickable="true" >
             </com.xyhui.widget.SpannedTextViewContent>
-
 
             <LinearLayout
                 android:layout_width="match_parent"
