--- a/PocketUni/res/layout/activity_event_launch.xml
+++ b/PocketUni/res/layout/activity_event_launch.xml
@@ -227,6 +227,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/layout_event_type"
                 android:layout_margin="8dip"
+                android:orientation="horizontal"
                 android:padding="4dip" >
 
                 <TextView
