--- a/PocketUni/res/values/arrays.xml
+++ b/PocketUni/res/values/arrays.xml
@@ -54,6 +54,13 @@
         <item>评分</item>
         <item>取消操作</item>
     </string-array>
+    <string-array name="event_comment_item">
+        <item>5分，非常好</item>
+        <item>4分，挺好</item>
+        <item>3分，还行</item>
+        <item>2分，一般</item>
+        <item>1分，太烂了</item>
+    </string-array>
     <string-array name="event_operate">
         <item>搜索活动</item>
         <item>发起活动</item>
