--- a/PocketUni/res/layout/list_item_photo_album.xml
+++ b/PocketUni/res/layout/list_item_photo_album.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#fcfcfc"
@@ -18,7 +19,6 @@
             android:layout_centerVertical="true"
             android:scaleType="centerCrop"
             android:src="@drawable/avatar00" />
-
 
         <LinearLayout
             android:layout_width="match_parent"
