--- a/PocketUni/res/layout/activity_photo_album.xml
+++ b/PocketUni/res/layout/activity_photo_album.xml
@@ -37,6 +37,14 @@
             android:layout_alignParentLeft="true"
             android:layout_marginLeft="2dip"
             android:background="@drawable/btn_selector_navbar_backicon" />
+        
+        <Button
+            android:id="@+id/btn_menu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="2dip"
+            android:background="@drawable/btn_selector_navbar_more" />
     </RelativeLayout>
 
 </RelativeLayout>
