--- a/PocketUni/res/layout/activity_photo_albumlist.xml
+++ b/PocketUni/res/layout/activity_photo_albumlist.xml
@@ -38,6 +38,14 @@
             android:layout_alignParentLeft="true"
             android:layout_marginLeft="2dip"
             android:background="@drawable/btn_selector_navbar_backicon" />
+        
+        <Button
+            android:id="@+id/btn_add"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="2dip"
+            android:background="@drawable/btn_selector_navbar_add" />
     </RelativeLayout>
 
 </RelativeLayout>
