--- a/PocketUni/res/values/arrays.xml
+++ b/PocketUni/res/values/arrays.xml
@@ -16,6 +16,12 @@
         <item>回复</item>
         <item>取消</item>
     </string-array>
+    <string-array name="privacylist">
+        <item>所有人可见</item>
+        <item>好友可见</item>
+        <item>自己可见</item>
+        <item>凭密码访问</item>
+    </string-array>
 
     <!-- Used in GroupMemberListView -->
     <string-array name="member_manage_demote">
@@ -43,18 +49,18 @@
         <item>邀请好友</item>
         <item>取消操作</item>
     </string-array>
-     <string-array name="event_lucky">
+    <string-array name="event_lucky">
         <item>抽签</item>
         <item>查看活动签到码</item>
         <item>取消操作</item>
-    </string-array> 
-     <string-array name="photo_click_admin">
+    </string-array>
+    <string-array name="photo_click_admin">
         <item>查看</item>
         <item>设为封面</item>
         <item>修改</item>
         <item>删除</item>
         <item>取消</item>
-    </string-array> 
+    </string-array>
     <string-array name="event_lucky_admin">
         <item>抽签</item>
         <item>查看活动签到码</item>
