--- a/PocketUni/res/layout/activity_group_event_list.xml
+++ b/PocketUni/res/layout/activity_group_event_list.xml
@@ -6,10 +6,10 @@
     android:background="#fcfcfc" >
 
     <com.handmark.pulltorefresh.library.PullToRefreshListView
-        android:id="@+id/blog_listview"
+        android:id="@+id/all_event_listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="44dip"
+        android:layout_below="@+id/navbar"
         android:cacheColorHint="#00000000"
         android:divider="@null"
         android:orientation="vertical" />
@@ -19,7 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dip"
         android:background="@drawable/bar_navigation_bg" >
-
+        
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="44dip"
@@ -35,7 +35,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="44dip"
                 android:gravity="center_vertical"
-                android:text="部落水帖" />
+                android:text="部落活动" />
         </LinearLayout>
 
         <Button
@@ -45,15 +45,17 @@
             android:layout_alignParentLeft="true"
             android:layout_marginLeft="2dip"
             android:background="@drawable/btn_selector_navbar_backicon" />
+        
 
         <Button
-            android:id="@+id/btn_newblog"
+            android:id="@+id/btn_operate"
             style="@style/navbar_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_marginRight="2dip"
-            android:background="@drawable/btn_selector_navbar_edit" />
+            android:background="@drawable/btn_selector_navbar_more"
+            android:visibility="invisible" />
     </RelativeLayout>
 
 </RelativeLayout>
