--- a/PocketUni/res/layout/activity_tab_app.xml
+++ b/PocketUni/res/layout/activity_tab_app.xml
@@ -405,7 +405,7 @@
                     android:src="@drawable/app_icon_love" />
 
                 <TextView
-                    android:id="@+id/txt_app_volunteer"
+                    android:id="@+id/txt_app_love"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/btn_app_love"
@@ -443,6 +443,33 @@
                     android:textSize="14sp" />
             </RelativeLayout>
             
+     		<RelativeLayout
+                android:id="@+id/layout_tupop"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="6dip"
+                android:layout_weight="1" >
+
+                <ImageButton
+                    android:id="@+id/btn_tupop"
+                    android:layout_width="66dip"
+                    android:layout_height="66dip"
+                    android:layout_centerHorizontal="true"
+                    android:background="@drawable/btn_selector_app"
+                    android:padding="3dip"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/app_icon_tipsbar" />
+
+                <TextView
+                    android:id="@+id/txt_tupop"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/btn_tupop"
+                    android:gravity="center"
+                    android:text="吐泡泡"
+                    android:textColor="#333"
+                    android:textSize="14sp" />
+            </RelativeLayout>
         <!--     <RelativeLayout
                 android:id="@+id/layout_app_train"
                 android:layout_width="wrap_content"
@@ -477,7 +504,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="6dip"
                 android:layout_weight="1"
-                android:visibility="invisible" >
+                android:visibility="gone" >
 
                 <ImageButton
                     android:id="@+id/btn_app_jqt1"
