--- a/PocketUni/res/layout/activity_tab_more.xml
+++ b/PocketUni/res/layout/activity_tab_more.xml
@@ -4,11 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fcfcfc" >
-    
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/ad_banner" >
+        android:layout_below="@+id/navbar" >
 
         <LinearLayout
             android:id="@+id/content"
@@ -254,31 +254,31 @@
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
-    
-    <com.xyhui.widget.AdBannerLayout
-        android:id="@+id/ad_banner"
-        android:layout_width="match_parent"
-        android:layout_height="50dip"
-        android:layout_below="@+id/navbar"
-        android:layout_marginTop="-6dip" />
 
     <RelativeLayout
         android:id="@+id/navbar"
         android:layout_width="match_parent"
-        android:layout_height="50dip"
-        android:background="@drawable/top_bg_yellow" >
+        android:layout_height="wrap_content" >
 
         <TextView
             android:id="@+id/navbar_TitleText"
-            android:textSize="18sp"
-            android:textColor="@color/white"
-            android:layout_width="wrap_content"
-            android:layout_height="44dip"
+            android:layout_width="match_parent"
+            android:layout_height="50dip"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:gravity="center_vertical"
-            android:text="更多" />
+            android:background="@drawable/top_bg_yellow"
+            android:gravity="center"
+            android:text="更多"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
+
+        <com.xyhui.widget.AdBannerLayout
+            android:id="@+id/ad_banner"
+            android:layout_width="match_parent"
+            android:layout_height="50dip"
+            android:layout_below="@+id/navbar_TitleText"
+            android:layout_marginTop="-6dip" />
     </RelativeLayout>
 
 </RelativeLayout>
