--- a/PocketUni/res/layout/activity_tab_app.xml
+++ b/PocketUni/res/layout/activity_tab_app.xml
@@ -388,29 +388,29 @@
             </RelativeLayout>
 
             <RelativeLayout
-                android:id="@+id/layout_app_love"
+                android:id="@+id/layout_app_record"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="6dip"
                 android:layout_weight="1" >
 
                 <ImageButton
-                    android:id="@+id/btn_app_love"
+                    android:id="@+id/btn_app_record"
                     android:layout_width="66dip"
                     android:layout_height="66dip"
                     android:layout_centerHorizontal="true"
                     android:background="@drawable/btn_selector_app"
                     android:padding="3dip"
                     android:scaleType="fitXY"
-                    android:src="@drawable/app_icon_love" />
+                    android:src="@drawable/app_icon_record" />
 
                 <TextView
-                    android:id="@+id/txt_app_love"
+                    android:id="@+id/txt_app_record"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/btn_app_love"
+                    android:layout_below="@+id/btn_app_record"
                     android:gravity="center"
-                    android:text="爱心校园"
+                    android:text="中奖纪录"
                     android:textColor="#333"
                     android:textSize="14sp" />
             </RelativeLayout>
