--- a/PocketUni/res/layout/activity_tab_school.xml
+++ b/PocketUni/res/layout/activity_tab_school.xml
@@ -102,7 +102,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="6dip"
-                android:layout_weight="1" >
+                android:layout_weight="1" 
+                android:visibility="invisible">
 
                 <ImageButton
                     android:id="@+id/btn_school_weibo"
