--- a/PocketUni/res/layout/activity_event_view.xml
+++ b/PocketUni/res/layout/activity_event_view.xml
@@ -64,7 +64,7 @@
                         android:text="我要参加"
                         android:textColor="#fff"
                         android:textSize="13sp" />
-                    
+
                     <Button
                         android:id="@+id/btn_cancel"
                         android:layout_width="wrap_content"
@@ -221,16 +221,54 @@
                             android:textSize="12sp" />
                     </LinearLayout>
 
-                    <ImageView
-                        android:id="@+id/img_more"
+                    <TextView
+                        android:id="@+id/tv_lianxi"
+                        android:textColor="@color/blue_highlight"
+                        android:textSize="18sp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
-                        android:layout_alignParentTop="true"
-                        android:layout_marginTop="10dip"
-                        android:scaleType="center"
-                        android:src="@drawable/more_black" />
+                        android:layout_centerVertical="true"
+                        android:text="【联系TA】" />
                 </RelativeLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/layout_eventuser"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" >
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#e8e8e8"
+                    android:orientation="horizontal" >
+
+                    <TextView
+                        style="@style/navigation_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:padding="8dip"
+                        android:text="活动报名人:"
+                        android:textColor="#894"
+                        android:textSize="14sp" />
+
+                    <Button
+                        android:id="@+id/btn_more_joiner"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/none"
+                        android:padding="8dip"
+                        android:text="更多" />
+                </LinearLayout>
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="1.5dip"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/weibo_split" />
             </LinearLayout>
 
             <LinearLayout
@@ -307,7 +345,7 @@
         android:id="@+id/navbar"
         android:layout_width="match_parent"
         android:layout_height="50dip"
-        android:background="@drawable/bar_navigation_bg" >
+        android:background="@color/blue_highlight" >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -320,11 +358,12 @@
 
             <TextView
                 android:id="@+id/navbar_TitleText"
-                style="@style/navigation_title"
                 android:layout_width="wrap_content"
                 android:layout_height="44dip"
                 android:gravity="center_vertical"
-                android:text="活动首页" />
+                android:text="活动首页"
+                android:textColor="@color/white"
+                android:textSize="18sp" />
         </LinearLayout>
 
         <Button
@@ -334,7 +373,7 @@
             android:layout_alignParentLeft="true"
             android:layout_marginLeft="2dip"
             android:background="@drawable/btn_selector_navbar_backicon" />
-        
+
         <Button
             android:id="@+id/btn_more"
             android:layout_width="wrap_content"
