--- a/PocketUni/res/layout/activity_gift_view.xml
+++ b/PocketUni/res/layout/activity_gift_view.xml
@@ -38,6 +38,15 @@
                 android:layout_margin="2dip"
                 android:textColor="@color/black"
                 android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/tv_content_html"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dip"
+                android:textColor="@color/black"
+                android:visibility="gone"
+                android:textSize="18sp" />
         </LinearLayout>
     </ScrollView>
 
