--- a/PocketUni/res/layout/activity_signin.xml
+++ b/PocketUni/res/layout/activity_signin.xml
@@ -23,7 +23,8 @@
         android:paddingLeft="10dip"
         android:text="选择所在城市"
         android:textColor="#fff"
-        android:textSize="13sp" />
+        android:textSize="13sp"
+        android:visibility="gone" />
 
     <Button
         android:id="@+id/btn_select_school"
