快捷键发状态，跳转的不是发状态界面，而是微博广场界面，涉及到“微博”字样需取消或改成“状态” title栏全部改成蓝色,cityid bug修复

--- a/PocketUni/res/layout/activity_course_list.xml
+++ b/PocketUni/res/layout/activity_course_list.xml
@@ -54,7 +54,7 @@
         android:id="@+id/navbar"
         android:layout_width="match_parent"
         android:layout_height="50dip"
-        android:background="@drawable/bar_navigation_bg" >
+        android:background="@color/blue_highlight" >
 
         <LinearLayout
             android:layout_width="match_parent"
