--- a/PocketUni/res/layout/activity_topic_wishhelp.xml
+++ b/PocketUni/res/layout/activity_topic_wishhelp.xml
@@ -40,7 +40,7 @@
         android:id="@+id/navbar"
         android:layout_width="match_parent"
         android:layout_height="50dip"
-        android:background="@drawable/bar_navigation_bg" >
+        android:background="@color/blue_highlight" >
 
         <Button
             android:id="@+id/btn_newweibo"
