--- a/PocketUni/res/layout/activity_weibo_view.xml
+++ b/PocketUni/res/layout/activity_weibo_view.xml
@@ -19,7 +19,7 @@
         android:id="@+id/navbar"
         android:layout_width="match_parent"
         android:layout_height="50dip"
-        android:background="@drawable/bar_navigation_bg" >
+        android:background="@color/blue_highlight" >
 
         <Button
             android:id="@+id/btn_back"
