--- a/PocketUni/res/values/styles.xml
+++ b/PocketUni/res/values/styles.xml
@@ -38,12 +38,7 @@
 
     <style name="navigation_title">
         <item name="android:textSize">18dip</item>
-        <item name="android:textColor">#5b2865</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:shadowColor">#90ffffff</item>
-        <item name="android:shadowDx">0</item>
-        <item name="android:shadowDy">2</item>
-        <item name="android:shadowRadius">0.01</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="school_title">
