--- a/PocketUni/res/layout/activity_tab_more.xml
+++ b/PocketUni/res/layout/activity_tab_more.xml
@@ -14,14 +14,13 @@
             android:id="@+id/content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:padding="12dip" >
+            android:orientation="vertical" >
 
             <LinearLayout
                 android:id="@+id/account_layout"
                 android:layout_width="match_parent"
                 android:layout_height="44dip"
-                android:background="@drawable/list_item_bg_top"
+                android:background="@drawable/list_item_bg_mid"
                 android:orientation="horizontal" >
 
                 <ImageView
@@ -105,7 +104,7 @@
                 android:id="@+id/qrscan_layout"
                 android:layout_width="match_parent"
                 android:layout_height="44dip"
-                android:background="@drawable/list_item_bg_bottom"
+                android:background="@drawable/list_item_bg_mid"
                 android:orientation="horizontal" >
 
                 <ImageView
@@ -134,7 +133,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="44dip"
                 android:layout_marginTop="12dip"
-                android:background="@drawable/list_item_bg_top"
+                android:background="@drawable/list_item_bg_mid"
                 android:orientation="horizontal" >
 
                 <ImageView
@@ -200,7 +199,7 @@
                 android:id="@+id/about_layout"
                 android:layout_width="match_parent"
                 android:layout_height="44dip"
-                android:background="@drawable/list_item_bg_bottom"
+                android:background="@drawable/list_item_bg_mid"
                 android:orientation="horizontal" >
 
                 <ImageView
@@ -224,34 +223,15 @@
                     android:src="@drawable/more_black" />
             </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/signout_layout"
+            <Button
+                android:id="@+id/btn_signout"
                 android:layout_width="match_parent"
                 android:layout_height="44dip"
                 android:layout_marginTop="12dip"
-                android:background="@drawable/list_item_bg_single"
-                android:orientation="horizontal" >
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ico_more_cancel" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="44dip"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical"
-                    android:text="注销账号"
-                    android:textColor="#666"
-                    android:textSize="16sp" />
-
-                <ImageView
-                    android:layout_width="30dip"
-                    android:layout_height="44dip"
-                    android:scaleType="center"
-                    android:src="@drawable/more_black" />
-            </LinearLayout>
+                android:background="@color/red_highlight"
+                android:textColor="@color/white"
+                android:text="注销账号"
+                android:textSize="16sp" />
         </LinearLayout>
     </ScrollView>
 
@@ -267,7 +247,7 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:background="@drawable/top_bg_yellow"
+            android:background="@color/blue_highlight"
             android:gravity="center"
             android:text="更多"
             android:textColor="@color/white"
