应用，在非口袋校园中，吐泡泡会和前面应用中空缺一个应用位置（见图：应用界面.png）

--- a/PocketUni/res/layout/activity_tab_me.xml
+++ b/PocketUni/res/layout/activity_tab_me.xml
@@ -55,7 +55,7 @@
                             android:background="@color/blue_highlight"
                             android:paddingBottom="10dp"
                             android:paddingTop="10dp"
-                            android:text="扑街"
+                            android:text="扑友"
                             android:textColor="@color/white"
                             android:textSize="16sp" />
 
